--- a/loginsystem/login/templates/main.html
+++ b/loginsystem/login/templates/main.html
@@ -29,24 +29,22 @@ My Baseball Club
   <thead class="">
     <tr>
       <th>ID</th>
+      <th>Username</th>
       <th>First Name</th>
       <th>Last Name</th>
       <th>Address</th>
       <th>City</th>
-      <th>Username</th>
-      <th>Password</th>
     </tr>
   </thead>
   {% for x in mydata %}
   <tbody>
     <tr>
       <td>{{ x.id }}</td>
-      <td>{{ x.firstname }}</td>
-      <td>{{ x.lastname }}</td>
+      <td>{{ x.username }}</td>
+      <td>{{ x.first_name }}</td>
+      <td>{{ x.last_name }}</td>
       <td>{{ x.address }}</td>
       <td>{{ x.city }}</td>
-      <td>{{ x.username }}</td>
-      <td>{{ x.password }}</td>
     </tr>
   </tbody>
   {% endfor %}
